# SokkaBot

./: README.md  announcement_storage.py  config.py  dbm_functions.py  globals.py  keep_alive.py  loggers.py  main.py  pyproject.toml  sql_connection.py  sqlite_connection.py
.upm/: store.json  store.json531414335  store.json566813859
cogs/: common.py  help.py  members.py  mods.py  music.py  owner.py  test.py  tools.py
common_functions/: gif_function.py
functions/: get_member_list.py  get_mod_func.py  joke_function.py  message_texts.py
functions/addRole_function/: addRoleEmbed.py  addRoleEmbedURL.py  reaction_dict.py
functions/gif_functions/: gif_database.py  gif_function.py
logs/: cmd_log.log.2022-05-08  cmd_log.log.2022-06-24  cmd_log.log.2022-07-08  cmd_log.log.2022-07-26  cmd_log.log.2022-07-30  cmd_log.log.2022-08-02  cmd_log.log.2022-08-04  cmd_log.log.2022-08-07  cmd_log.log.2022-08-13  error_log.log.2022-05-05  error_log.log.2022-05-11  log.log.2022-04-16
mod_functions/: data_check.py  export_to_JSON.py  form_components.py  generate_ticket.py  import_from_JSON.py  min_time_dict.py  remove_announcement.py  sch_database_functions.py  text_to_time_obj.py  text_to_timestamp.py  ticket_id_functions.py  tickets.py
music_functions/: audio_configs.py  checks.py  is_url_func.py
obsolete/: beta.txt  gif_function.py  greeting_function.py  joke_function.py  main.py  music-backup.py  music-backup2.py  music_play.py
owner_functions/: export_to_JSON.py  import_from_JSON.py  min_time_dict.py  min_timestamp.py  text_to_timestamp.py  ticket_id_functions.py
(+3 files in other folders)
