[tool.poetry]
name = "repl_python3_SokkaBotCode"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.0.0"
youtube-search = "^2.1.0"
PyNaCl = "^1.4.0"
youtube_dl = "^2021.6.6"
pytz = "^2021.3"
aiosqlite = "^0.17.0"
aiohttp = "^3.8.1"
disnake = "^2.4.0"
black = "^22.1.0"
sty = "^1.0.4"
logger = "^1.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
